# ocaml_tcp_client

./: .gitignore  LICENSE  README.md  dune
tcp-client-with-retry/: client.ml
tcp-client-with-timeout/: client.ml
tcp_client_with_retry/: dune-project
tcp_client_with_retry/lib/: dune
tcp_client_with_retry/test/: dune
tcp_server/: dune-project
tcp_server/lib/: dune
tcp_server/test/: dune
uppercase-server/: server.ml
uppercase-server-with-sleep/: server.ml
